--- a/theBackend/package.json
+++ b/theBackend/package.json
@@ -4,7 +4,8 @@
   "description": "video app backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node server.js",
+    "start": "nodemon server.js"
   },
   "author": "Syyad Khan",
   "license": "MIT",
@@ -12,6 +13,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongoose": "^5.4.2"
+    "mongoose": "^5.4.2",
+    "nodemon": "^1.18.9"
   }
 }
